# SentinelPy

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_crear_tablas_iniciales.py  002_crear_tabla_usuarios.py  003_crear_tabla_agents.py  004_add_heartbeat_timeout.py  005_add_alert_grouping.py  006_add_analysis_data.py  007_create_entity_risks.py  008_add_performance_indexes.py  009_create_threat_intel_tables.py
backend/app/: auth.py  config.py  database.py  logging_config.py  main.py  middleware.py  ratelimit.py
backend/app/api/: admin.py  agents.py  alerts.py  analysis.py  auth.py  events.py  rules.py  stats.py  threat_intel.py  users.py
backend/app/models/: __init__.py  agent.py  alert.py  base.py  event.py  rule.py  threat_intel.py  user.py
backend/app/schemas/: __init__.py  agent.py  alert.py  common.py  event.py  rule.py  threat_intel.py  user.py
backend/app/services/: agent_service.py  alert_service.py  analysis_service.py  (+12 more)
backend/scripts/: docker-entrypoint.sh  seed_demo_data.py
backend/tests/: conftest.py  test_alert_grouping.py  test_alert_groups_api.py  test_analysis_api.py  test_analysis_service.py  test_analysis_service_coverage.py  test_api.py  test_api_admin.py  test_api_alerts.py  test_api_alerts_update.py  test_api_analysis.py  test_api_auth.py  test_api_events.py  test_api_events_pipeline.py  test_api_rules.py  test_api_rules_toggle.py  test_api_stats.py  test_api_stats_extended.py  test_api_threat_intel.py  test_api_users.py  test_api_users_extended.py  test_auth.py  test_auth_deps.py  test_collector.py  test_config_ti.py  test_config_validation.py  test_e2e_agent.py  test_e2e_threat_intel.py  test_engine.py  test_engine_coverage.py  test_engine_ti.py  test_integration_agent_ingest.py  test_integration_agents.py  test_integration_alerts.py  test_integration_alerts_endpoint.py  test_integration_analysis.py  test_integration_auth.py  test_integration_events.py  test_integration_pipeline.py  test_integration_rules.py  (+16 more)
(+74 files in other folders)
